--- a/src/content/work/h20.md
+++ b/src/content/work/h20.md
@@ -1,5 +1,5 @@
 ---
-title: h2.0
+title: Matrix
 publishDate: 2019-10-02 00:00:00
 img: /assets/myMatrix.jpg
 img_alt: Soft pink and baby blue water ripples together in a subtle texture.
