Added new articles my work page and photos, videos and skills.

--- a/src/content/work/h20.md
+++ b/src/content/work/h20.md
@@ -1,22 +1,134 @@
 ---
-title: Matrix
+title: Pinia
 publishDate: 2019-10-02 00:00:00
-img: /assets/myMatrix.jpg
+img: /assets/Pinia.png
 img_alt: Soft pink and baby blue water ripples together in a subtle texture.
 description: |
-  We developed brand positioning and design assets for the launch
-  of a new colored water product.
+ 
 tags:
-  - Design
-  - Branding
+  - Frontend
+  - Vue
+  - Pinia
+
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur posuere commodo venenatis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam non ligula vel metus efficitur hendrerit. In hac habitasse platea dictumst. Praesent et mauris ut mi dapibus semper. Curabitur tortor justo, efficitur sit amet pretium cursus, porta eget odio. Cras ac venenatis dolor. Donec laoreet posuere malesuada. Curabitur nec mi tempor, placerat leo sit amet, tincidunt est. Quisque pellentesque venenatis magna, eget tristique nibh pulvinar in. Vestibulum vitae volutpat arcu. Aenean ut malesuada odio, sit amet pellentesque odio. Suspendisse nunc elit, blandit nec hendrerit non, aliquet at magna. Donec id leo ut nulla sagittis sodales.
 
-Integer vitae nibh elit. Suspendisse eget urna eu neque bibendum pharetra. Sed interdum lectus sem, in pulvinar magna dignissim vel. Quisque maximus at urna nec laoreet. Suspendisse potenti. Vestibulum rhoncus sem ut mi pellentesque, in vestibulum erat blandit. Aliquam sodales dui ac maximus consectetur. Duis quis est vehicula, imperdiet nisl nec, fermentum erat. Duis tortor diam, pharetra eu euismod in, vehicula non eros. Curabitur facilisis dui at erat ultrices gravida. In at nunc ultricies, pulvinar mi vel, sagittis mauris. Praesent pharetra posuere purus ac imperdiet. Nulla facilisi.
 
-Sed pulvinar porttitor mi in ultricies. Etiam non dolor gravida eros pulvinar pellentesque et dictum ex. Proin eu ornare ligula, sed condimentum dui. Vivamus tincidunt tellus mi, sed semper ipsum pharetra a. Suspendisse sollicitudin at sapien nec volutpat. Etiam justo urna, laoreet ac lacus sed, ultricies facilisis dolor. Integer posuere, metus vel viverra gravida, risus elit ornare magna, id feugiat erat risus ullamcorper libero. Proin vitae diam auctor, laoreet lorem vitae, varius tellus.
+# Pinia – Your New Superhero in the Vue.js Universe
 
-Mauris sed eros in ex maximus volutpat. Suspendisse potenti. Donec lacinia justo consectetur sagittis tempor. Proin ullamcorper nisi vitae auctor rhoncus. Sed tristique aliquam augue. Pellentesque vitae fringilla ligula. Nulla arcu elit, efficitur eu nunc malesuada, eleifend tincidunt orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer mattis orci in bibendum ultricies. Quisque a dui erat. Phasellus et vulputate ipsum. Proin metus ex, lobortis nec ornare eget, bibendum ut sapien. Aliquam in dolor lobortis, aliquam tellus a, congue augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+Time for some fun with Pinia! Imagine Pinia as a superhero in the frontend world, coming to rescue your Vue.js app from chaos. Ready for a funny journey with the fascinating Pinia framework? Let’s go…
 
-Aenean pretium purus augue, ut bibendum erat convallis quis. Cras condimentum quis velit ac mollis. Suspendisse non purus fringilla, venenatis nisl porta, finibus odio. Curabitur aliquet metus faucibus libero interdum euismod. Morbi sed magna nisl. Morbi odio nibh, facilisis vel sapien eu, tempus tincidunt erat. Nullam erat velit, sagittis at purus quis, tristique scelerisque tortor. Pellentesque lacinia tortor id est aliquam viverra. Vestibulum et diam ac ipsum mollis fringilla.
+Imagine your Vue.js app as a massive spaceship. One moment it’s cruising through uncharted galaxies, the next it’s sinking into chaos because someone forgot about the app state. Enter Pinia – our versatile captain, swooping in to save the day with grace and style.
+
+## What is Pinia?
+
+![Pinia3.png](../../assets/Pinia3.png)
+
+Pinia is a state management library for Vue 3. Think of it as Vuex but with a modern twist. It’s lightweight, elegant, and ready to take charge. Its mission? To keep your apps organized when all your components start doing their own thing.
+
+## Installing Pinia
+
+Before we start the fun, we need to install our superhero. In your terminal, type:
+
+```bash
+bashCopy code
+npm install pinia
+
+```
+
+Or, if you’re a Yarn fan:
+
+```bash
+bashCopy code
+yarn add pinia
+
+```
+
+## Creating a Pinia Store
+
+Pinia works like a store where you keep all the important stuff, like user info, preferences, and more. Here’s how to create your first store:
+
+```jsx
+javascriptCopy code
+// stores/counterStore.js
+import { defineStore } from 'pinia'
+
+export const useCounterStore = defineStore('counter', {
+  state: () => ({
+    count: 0
+  }),
+  actions: {
+    increment() {
+      this.count++
+    }
+  }
+})
+
+```
+
+See? Now you’ve got your own store with one value – a counter. You can increase it whenever you like!
+
+## Using the Store in a Component
+
+Now it’s time for our store to shine. Let’s use it in a Vue component:
+
+```
+vueCopy code
+<template>
+  <div>
+    <p>Current count: {{ counter.count }}</p>
+    <button @click="counter.increment">Increase Count</button>
+  </div>
+</template>
+
+<script setup>
+import { useCounterStore } from '@/stores/counterStore'
+
+const counter = useCounterStore()
+</script>
+
+```
+
+## Pinia at Your Fingertips
+
+Pinia offers more than just basic operations. You can create stores with asynchronous actions, use getters, and more. Here’s an example of an advanced store:
+
+```jsx
+javascriptCopy code
+// stores/userStore.js
+import { defineStore } from 'pinia'
+
+export const useUserStore = defineStore('user', {
+  state: () => ({
+    user: null
+  }),
+  actions: {
+    async fetchUser() {
+      // Simulate fetching data from an API
+      this.user = await fetch('/api/user').then(res => res.json())
+    }
+  },
+  getters: {
+    isLoggedIn: (state) => !!state.user
+  }
+})
+
+```
+
+## Why is Pinia Awesome?
+
+![Pinia2.png](../../assets/Pinia2.png)
+
+- **Simplicity:** With Pinia, everything is like gold – simple and intuitive.
+- **Modularity:** You can have stores like balls – as many as you want.
+- **TypeScript Support:** If you’re a TypeScript fan, Pinia is as friendly as your favorite pillow.
+
+## Conclusion
+
+Pinia is the superhero you need in your Vue.js app. With it, you can manage state like a true wizard. So don’t wait – start using Pinia and make your apps more organized than ever before!
+
+# May the Force be with you!
+
+<video width="100%" height="500" controls>
+  <source src="/assets/Pinia.mp4" type="video/mp4">
+</video>
